--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,13 +20,13 @@ body {
   font-weight: 700;
 }
 
-.wave__background {
-  height: 100vh;
-  left: 0;
-  bottom: 0;
-  position: fixed;
-  z-index: -10;
-}
+// .wave__background {
+//   height: 100vh;
+//   left: 0;
+//   bottom: 0;
+//   position: fixed;
+//   z-index: -10;
+// }
 
 .login__container {
   display: grid;
