--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,11 +40,11 @@ body {
   position: relative;
 }
 
-.phone__avatar {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
+// .phone__avatar {
+//   display: flex;
+//   justify-content: flex-end;
+//   align-items: center;
+// }
 
 .img__phone {
   width: 500px;
