--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,13 +20,13 @@ body {
   font-weight: 700;
 }
 
-// .wave__background {
-//   height: 100vh;
-//   left: 0;
-//   bottom: 0;
-//   position: fixed;
-//   z-index: -10;
-// }
+.wave__background {
+  height: 100vh;
+  left: 0;
+  bottom: 0;
+  position: fixed;
+  z-index: -10;
+}
 
 .login__container {
   display: grid;
@@ -40,11 +40,11 @@ body {
   position: relative;
 }
 
-// .phone__avatar {
-//   display: flex;
-//   justify-content: flex-end;
-//   align-items: center;
-// }
+.phone__avatar {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
 
 .img__phone {
   width: 500px;
